[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A CLI tool to fetch research papers from PubMed."
authors = ["Kiran K <kiranrkuyate2024@gmail.com>"]
license = "MIT"
packages = [{ include = "pubmed_fetcher", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.3"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
